--- a/jenkinsagen.yaml
+++ b/jenkinsagen.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: jenkins_agent
+  name: jenkins
   labels:
-    app: jenkins_agent
+    app: jenkins
 spec:
   containers:
   - image: jenkins/jnlp-slave
